# Web2App

./: .dev.vars.example  .env.example  .gitignore  README.md  package-lock.json  package.json  wrangler.toml
.github/scripts/: generate-app-icons.mjs  inject-in-app-nav.mjs  inject-tauri-shell.mjs  patch-android-gradle.mjs  patch-android-system-bars.mjs  prepare-template.mjs  setup-android-signing.sh  sign-android-apk.sh
.github/workflows/: build-app.yml
builds/1GXS7BFwRW/: version.txt
builds/Avvy6QvGF4/: version.txt
builds/JDGPnhOn1_/: version.txt
builds/R2ppnODBNe/: version.txt
builds/Rz4lhec3aS/: version.txt
builds/X4BTsYv3O2/: version.txt
builds/X883begTyJ/: version.txt
builds/ZvFfF6lz4Z/: version.txt
builds/bCN2ovXhxf/: version.txt
examples/sample-site/: index.html
frontend/: index.html  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
scripts/: generate-android-keystore.sh
server/: index.ts  load-env.ts  package.json  tsconfig.json
server/db/: index.ts  schema.sql
server/routes/: builds.ts
server/services/: github.ts  zip.ts
template/: package.json
template/scripts/: tauri-shell.js
template/src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
template/src-tauri/capabilities/: default.json
template/src-tauri/permissions/: proxy-fetch.toml
template/src-tauri/src/: lib.rs  main.rs
web/: package.json  tsconfig.app.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  api.ts  styles.css
worker/: package.json  tsconfig.json
(+21 files in other folders)
